2023-08-20T00:38:21Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5914377290 # 3677
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-08-20
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 2766 / 0 2767 / +0 +1

2023-08-19T12:12:52Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5911298498 # 3674
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-08-19
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 2765 / 0 2766 / +0 +1

2023-08-18T20:07:56Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5906665101 # 3670
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-08-18
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 2764 / 0 2765 / +0 +1

2023-08-18T16:09:46Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5904740960 # 3669
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-08-18
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 2762 / 0 2764 / +0 +2

2023-08-18T12:14:23Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5902475365 # 3668
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-08-18
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 2760 / 0 2762 / +0 +2

2023-08-16T16:09:44Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5881194503 # 3657